# Masterarbeit

./: .gitignore  .gitmodules  =0.43.2  cache.json  model_cache.json  pyproject.toml  safim_adversarial_debug_11_samples.txt  safim_adversarial_log.txt
configs/: base.yaml
data/: demo.jsonl
debug/: detailed_results.json
docs/notes/: safim_adversarial_debug_11_samples_less.txt  safim_adversarial_debug_11_samples_more.txt
examples/: batch_requests.jsonl
pythonProject7/: ogb_parser.py  script_parse_samples.py
pythonProject7/.ipynb_checkpoints/: Dir_graph_ast-checkpoint.ipynb  (+2 more)
results_Llama-3.1-8B-Instruct/: adversarial_reorderings.jsonl  adversarial_reorderings_score_distributions.json  adversarial_reorderings_search_stats_per_sample.json
results_Llama-3.2-3B-Instruct/: adversarial_reorderings.jsonl  adversarial_reorderings_score_distributions.json  adversarial_reorderings_search_stats_per_sample.json  adversarial_vs_normal_analysis.json  per_sample_score_stats.json
results_gemma-3-12b-it/: adversarial_vs_normal_analysis.json  sample_score_confidence_stats.json
results_gemma-3-1b-it/: adversarial_reorderings.jsonl  adversarial_reorderings_distributions.jsonl  adversarial_reorderings_gemma3-1B.jsonl  adversarial_reorderings_gemma3-1B_distributions.jsonl  adversarial_reorderings_gemma3-1B_stats.json  adversarial_reorderings_score_distributions.json  adversarial_reorderings_search_stats_per_sample.json  adversarial_reorderings_stats.json  adversarial_vs_normal_analysis.json  per_sample_score_stats.json  sample_score_stats.json
tests/: test_cli.py
(+133 files in other folders)
