[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masterarbeit"
version = "0.0.1"
description = "Code and experiments for the paper derived from the Masterarbeit."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Florian Hirt" }]
dependencies = [
  "numpy", "pandas", "matplotlib", "scikit-learn",
  "tqdm", "pyyaml", "regex", "networkx", "tree_sitter",
]

[project.scripts]
masterarbeit = "masterarbeit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
